--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -193,6 +193,7 @@ if (CMAKE_BUILD_TYPE MATCHES "Debug")
 	message(STATUS "Adding -DDEBUG to definitions.")
 	add_definitions(-DDEBUG)
 else()
+	set(CMAKE_BUILD_TYPE "Release")
 	set(CMAKE_INSTALL_DO_STRIP TRUE)
 	message(STATUS "Adding -DNDEBUG to definitions.")
 	add_definitions(-DNDEBUG)
